vbnc/vbnc/tests/Errors/30200-1.vb
Interface SomeClass

    Function Foo() As New System.Collections.Generic.List(Of String)
    
End Interface